# stoic-agentos

./: .env.example  .env.selfhost.example  .gitignore  .lighthouserc.json  .redocly.lint-ignore.yaml  .vercelignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dashboard  INVESTOR_ONEPAGER.md  LICENSE  README.cn.md  README.es.md  README.ja.md  README.kr.md  README.md  README.pt.md  ROADMAP.md  SECURITY.md  SELF_HOSTING.md  docker-compose.selfhost.yml  docker-compose.yml  eslint.config.js  index.html  llms.txt  package-lock.json  package.json  playwright.config.js  run-migration-012.mjs  run-migration-013.mjs  run-migrations.mjs  vercel.json
.claude/: settings.json
.github/: FUNDING.yml  pull_request_template.md
api/: mcp.js  openapi.yaml  package-lock.json  package.json  run-migration.ts  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts
launch-assets/: awesome-llmops-resubmission.md  demo.mjs  discord-setup-guide.md  good-first-issues.md  linkedin-gtm-strategy.md  linkedin-post-june-4.md  linkedin-post-june-5.md  linkedin-post.md  loom-demo-script.md  newsletter-pitch.md  reddit-localllama-post.md  reddit-node-post.md  show-hn-post.md  soft-launch-templates.md  video-walkthrough-script.md
mcp-server/: Dockerfile  README.md  index.js  package-lock.json  package.json  railway.toml
sdk-python/: README.md  pyproject.toml
sdk-python/stoicos/: __init__.py  client.py  compliance.py  errors.py  memory.py  reflection.py
sdk-python/stoicos.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdk-python/tests/: test_client.py
(+263 files in other folders)
