[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stoicos"
version = "1.0.0"
description = "Official Python SDK for Stoic AgentOS — AI Agent Operations Platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "StoicOS Team", email = "hello@stoicagentos.com"}]
dependencies = ["httpx>=0.27"]
keywords = ["agentos", "agents", "ai", "llm", "observability", "memory", "compliance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://stoicagentos.com"
Repository = "https://github.com/benjaminkernbaum-ux/stoic-agentos"
Documentation = "https://docs.stoicagentos.com"
